ops/route/app-ingress.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'false'
  name: clientes-route
  namespace: fiap-7aso-grupo-8
  labels:
    app: fiap-aso7-app
    app.kubernetes.io/component: fiap-aso7-app
    app.kubernetes.io/instance: fiap-aso7-app
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/part-of: fiap-aso7
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 12-ubi7
spec:
  host: clientes.apps.na46.prod.nextcle.com
  to:
    kind: Service
    name: fiap-7aso
    weight: 100
  port:
    targetPort: 8081
  wildcardPolicy: None
